2025-01-08  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-xref-apropos.el:
	* site-lisp/consult-browser-hist.el: Use the default consult
	highlight function.

	* init.el: Set customized faces for emacs server.
	Ignore EGLOT buffers in consult-buffer.

	* site-lisp/consult-xref-apropos.el: Adapt to consult 1.10.

	* site-lisp/consult-browser-hist.el: Requires consult 1.10.
	Truncate the titles if too long.
	(consult-browser-hist-title-max-width): New user option.

	* site-lisp/exde.el: Put exwm-firefox-mode, exwm-xim-mode,
	exmw-systemtray mode and exiwm-ns-init into exwm-init-hook.

2025-01-07  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/consult-browser-hist.el: Properly specify narrow keys.

	* init.el (consult-browser-hist): Fix autoload.

	* site-lisp/consult-browser-hist.el: Adapt to new consult api.

	Move consult interface for browser-hist to a separate file.
	* consult-browser-hist.el: New file.
	* init.el: Remove consult-browser-hist implemenation.

	* init.el: Add a consult-buffer-source for FireFox.
	Add autoload cookie for `browser-hist--send-query'.

	* site-lisp/exde.el: Enable exwm-ns.
	* packages.el: Add package exwm-ns.

2025-01-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (consult-browser-hist): Enhance browser-hist with consult.

2025-01-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/exde.el: Enable display time mode.
	Add commands for capturing screens.
	(exde-capture-xwindow, exde-capture-interactive)
	(exde-capture-fullscreen): New commands.
	(exde-capture-and-display): New function.
	(+exwm--read-window-id): New function.
	(exde-capture-frame): New command.
	(exde-capture-rectangle): New function.
	(exde-capture-window): New command.

2025-01-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+exwm--command-line-handler): Handle --exde as well as
	--exwm.
	* site-lisp/exde.el: Rename from exwm-settings.
	* packages.el: Add exwm, xelb, exwm-firefox.

	* init.el: Add kagi.com to webjump-sites.

	* exwm-settings.el: Move rime workaround for EXWM to exwm-settings.el.
